# HPC-Cluster-Behavior-Intellegence-Platform

./: .gitignore  0-docker-compose.yml  0-init.sh  HPC Cluster Behavior Intelligence Platform.md  HPC Cluster Behavior Intelligence Platform_v1.md  HPC_Cluster_Behavior_Intelligence_Platform_v2.md  Phase0.md  README.md  start.sh
hpc-behavior-platform/: README.md
hpc-behavior-platform/alerting/: README.md  pyproject.toml
hpc-behavior-platform/alerting/alerting/: baseline_state.py  run.py  scheduler.py  store.py  webhook.py
hpc-behavior-platform/alerting/tests/: conftest.py  test_baseline_state.py  test_scheduler.py  test_store.py  test_webhook.py
hpc-behavior-platform/analysis-api/: pyproject.toml
hpc-behavior-platform/analysis-api/analysis_api/: cache.py  deps.py  envelope.py  main.py  saved_analyses.py  schemas.py  session.py  staging.py
hpc-behavior-platform/analysis-api/analysis_api/routers/: analyses.py  inter.py  intra.py  jobs.py  raw.py  session.py
hpc-behavior-platform/analysis-api/tests/: conftest.py  test_analyses.py  test_inter.py  test_intra.py  test_raw_and_jobs.py  test_session.py
hpc-behavior-platform/analysis-core/: pyproject.toml
hpc-behavior-platform/analysis-core/analysis_core/inter/: __init__.py  ccpca.py  clustering.py  incremental.py  multidr.py  pipeline.py  quality.py  run.py
hpc-behavior-platform/analysis-core/analysis_core/intra/: __init__.py  baseline.py  mrdmd.py  run.py  zscores.py
hpc-behavior-platform/analysis-core/tests/: conftest.py  test_baseline.py  test_ccpca.py  test_clustering.py  test_incremental.py  test_mrdmd.py  test_multidr.py  test_pipeline.py  test_quality.py  test_zscores.py
hpc-behavior-platform/behavior-ui/: .env.example  .gitignore  index.html  package-lock.json  package.json  playwright.config.ts
hpc-behavior-platform/behavior-ui/e2e/: acceptance.spec.ts  saved-analyses.spec.ts
hpc-behavior-platform/behavior-ui/src/: App.tsx
hpc-behavior-platform/docs/: README.md  admin-guide.md  deployment.md  development.md  overview.md  plan-zscore-parallelization.md  quick-start.md  runbook-raw-hardware.md  test-plan-hardware-oci.md  user-guide.md
hpc-behavior-platform/evaluation/: README.md  pyproject.toml
hpc-behavior-platform/evaluation/evaluation/: dr_ablation.py  fault_injection.py  fixtures.py  ground_truth.py  quality_benchmark.py  research_contrastive.py  run_all.py
hpc-behavior-platform/evaluation/reports/: dr_ablation.md  fault_injection.md  quality_benchmark.md  research_contrastive.md
hpc-behavior-platform/evaluation/tests/: test_dr_ablation.py  test_fault_injection.py  test_ground_truth.py  test_quality_benchmark.py  test_research_contrastive.py
hpc-behavior-platform/ingest-infra/: README.md  docker-compose.ha.yml  docker-compose.yml
hpc-behavior-platform/ingest-infra/clickhouse/: schema.sql
hpc-behavior-platform/ingest-infra/ha/: README.md  verify.sh
hpc-behavior-platform/ingest-infra/tools/: Dockerfile  (+5 more)
hpc-behavior-platform/telemetry-agent/: README.md
hpc-behavior-platform/tensor-store/: pyproject.toml
hpc-behavior-platform/tensor-store/tensor_store/: __init__.py  api.py  cache.py  grid.py  loader.py  normalize.py  nulls.py  tensor.py
hpc-behavior-platform/tensor-store/tests/: conftest.py  test_api.py  test_cache.py  test_grid.py  test_normalize.py  test_nulls.py  test_tensor.py
hpc-behavior-platform/tensor-store/tools/: bench_get_tensor.py
(+27 files in other folders)
